--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,10 @@
 ---
 import "@fontsource/atkinson-hyperlegible/400.css";
 import "@fontsource/atkinson-hyperlegible/400.css";
+import "@fontsource/ranga/400.css";
+import "@fontsource/ranga/700.css";
+import ranga400url from "@fontsource/ranga/files/ranga-latin-400-normal.woff2?url";
+import ranga700url from "@fontsource/ranga/files/ranga-latin-700-normal.woff2?url";
 import atkinson400url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyperlegible-latin-400-normal.woff2?url";
 import atkinson700url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyperlegible-latin-700-normal.woff2?url";
 import Nav from "../components/Nav.astro";
@@ -37,6 +41,18 @@ const { title = "Ben Holmes", headings } = Astro.props;
       as="font"
       crossorigin="anonymous"
     />
+    <link
+      rel="preload"
+      href={ranga400url}
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href={ranga700url}
+      as="font"
+      crossorigin="anonymous"
+    />
     <slot name="head" />
     <title>{title}</title>
   </head>
@@ -62,7 +78,7 @@ const { title = "Ben Holmes", headings } = Astro.props;
       --font-size-3xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
       --font-size-4xl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 
-      --font-heading: "Sriracha", system-ui, -apple-system, BlinkMacSystemFont,
+      --font-heading: "Ranga", system-ui, -apple-system, BlinkMacSystemFont,
         "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
 
