feat: Heading 2 whiteboard boogaloo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import InBrief from "../components/InBrief.astro";
-import Heading from "../components/Heading.astro";
+import Heading from "../components/Heading2.astro";
 import IBen from "../components/iBen/Frame.astro";
 ---
 
