--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,6 @@ import atkinson400url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyp
 import atkinson700url from "@fontsource/atkinson-hyperlegible/files/atkinson-hyperlegible-latin-700-normal.woff2?url";
 import Nav from "../components/Nav.astro";
 import type { MarkdownHeading } from "astro";
-import ScrollableBody from "../components/ScrollableBody.astro";
 
 type Props = {
   title?: string;
@@ -40,10 +39,10 @@ const { title = "Ben Holmes", headings } = Astro.props;
     <slot name="head" />
     <title>{title}</title>
   </head>
-  <ScrollableBody>
+  <body class="dark:bg-gray-950 dark:text-white text-base">
     <Nav headings={headings} />
     <slot />
-  </ScrollableBody>
+  </body>
 
   <style is:global>
     @import "open-props/easings";
