--- a/src/components/iBen/Button.astro
+++ b/src/components/iBen/Button.astro
@@ -117,7 +117,7 @@ const { icon, ...btnAttrs } = Astro.props;
   .back {
     transition:
       filter theme(transitionTimingFunction.in-out) 0.2s,
-      transform var(--ease-spring-3) 0.2s;
+      transform theme(transitionTimingFunction.spring-5) 0.5s;
   }
   svg {
     width: 100%;
