feat: better nav styles (need view transitions)

--- a/src/components/Heading2.astro
+++ b/src/components/Heading2.astro
@@ -10,7 +10,7 @@
         >Ben.</strong
       >
     </h1>
-    <p class="text-lg mb-5 text-slate-400">
+    <p class="text-xl mb-5 text-slate-400">
       The <span class="text-white">whiteboard guy</span> who codes kinda well.
     </p>
     <div class="flex gap-2">
